[project]
name = "image-classification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bing-image-downloader>=1.1.2",
    "downloader>=0.98",
    "matplotlib>=3.10.8",
    "tensorflow[and-cuda]>=2.20.0",
]

[tool.uv.workspace]
members = [
    "image-classifier",
]
